--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -178,444 +178,20 @@ page-contact:
   title: Kontakt
   description: Zaujal Vás ORIGAM? Chcete si vyzkoušet prototyp nebo se stát partnerem?
     Napište nám, co potřebujete. Vše rádi zodpovíme.
-#   main:
-#     title: Představíme Vám ORIGAM osobně nebo online
-#     subtitle: Zaujaly Vás funkce? Chcete si vyzkoušet prototyp? Nebo se Vám
-#       ORIGAM líbí tak, že chcete být partnerem? Napište nám, co potřebujete.
-#       Vše rádi zodpovíme.
-#   form:
-#     interest-type: Čím Vás ORIGAM zaujal?
-#     interest1: Jsme organizace a potřebujeme inovovat náš interní systém
-#     interest2: Chceme se stát ORIGAM partnerem
-#     name: Vaše jméno nebo název organizace
-#     e-mail: Kontaktní e-mail
-#     phone: Telefon
-#     help: V čem Vám můžeme pomoci?
-#     button-send: Odeslat
 
-support:
-  title: Podpora
-  subtitle: Kdo mi pomůže v&nbsp;nesnázích?
-  intro: Výhodou open source softwaru je široká základna lidí a organizací,
-      která pomáhá s rozvojem systému. Nemusíte se tak omezovat na jednoho
-      partnera.
+    
+about-us:
+  title: about us
+  description: about us
 
-support-types:
-  -
-    title: Komunitní fórum
-    image: /img/icons/forum.svg
-    image-alt: forum
-    text: Fórum je dostupné pro každého. Tady najdete první stupeň 
-      podpory. Na relevantní dotazy a návrhy na zlepšení odpovídají zkušení 
-      členové komunity.
-    button-text: Otevřít fórum
-    button-link: https://community.origam.com
-    translate-link: false
-  -
-    title: Partneři
-    image: /img/icons/carbon_partnership.svg
-    image-alt: partnership
-    text: Partneři jsou certifikovaní specialisté na ORIGAM. S nimi řešíte
-      prototyp, vývoj na míru i podporu. Platíte za čas, který se Vám věnuje.
-    button-text: Seznam partnerů
-    button-link: partners
-    translate-link: true
-  -
-    title: Core Team
-    image: /img/icons/carbon_star-filled.svg
-    image-alt: star
-    text: Pořád je tady i ORIGAM guru - zakladatelský tým. Bez pomoci rozhodně
-      nezůstanete.
-    button-text: Advantage Solutions
-    button-link: http://www.advantages.cz
-    translate-link: false
+how-we-work:
+  title: how-we-work
+  description: how-we-work
 
-page-product:
-  title: Produkt
-  description: Poskládejte si ORIGAM software, který vyhovuje Vaší organizaci – databázové,
-   logistické a rozpočtové aplikace, analýza i vyhodnocování dat.
-   Software na míru rychle a za cenu hotového řešení.
-  start:
-    title: Začít s ORIGAM je prosté
-    subtitle: Usnadněte si práci a soustřeďte se na své podnikání. 
-      Poskládejte si s ORIGAM software, který vyhovuje Vaší organizaci. 
-      Rychle a za cenu hotového řešení.
-  aspects:
-    title: Rozšiřitelnost
-    subtitle: Funkce ORIGAM
-    intro: Vyberte si z více jak 30 komponent a sestavte si aplikaci přesně na
-      míru vašim potřebám. To vše bez jediné řádky kódu.
-  industries:
-    title: Odvětví
-    subtitle: Pro koho se ORIGAM&nbsp;hodí?
-    intro: Digitální transformace. Inovativní firmy a oddělení. Specifické
-      nároky na procesy. ORIGAM je zejména pro ty, které neuspokojí běžné
-      aplikace dostupné na trhu nebo by museli software zdlouhavě vyvíjet od
-      nuly. Používají ho jak malí podnikatelé, tak i velké či nadnárodní
-      společnosti a neziskové organizace, napříč odvětvími.
-  process:
-    title: Náš proces
-    subtitle: Jak začít<br>s ORIGAM?
-    intro: Už jste rozhodnutí pro změnu nebo se zatím jen poohlížíte? Nejvíc
-      se stejně dozvíte napřímo od nás - telefonicky, osobně nebo online.
-    button-text: Domluvit schůzku
-  testimonials:
-    title: Jak ORIGAM používají naši zákazníci
+work-with-us:
+  title: work-with-us
+  description: work-with-us
 
-start-reasons:
-  -
-    title: Jednoduché ovládání
-    image: /img/icons/carbon_rocket.svg
-    image-alt: rocket
-    text: Uživatelské rozhraní má elegantní design, snadno se ovládá a používá.
-      Žádné složité seznamování, jste produktivní od první chvíle.
-  -
-    title: Snadné změny
-    image: /img/icons/carbon_direction-fork.svg
-    image-alt: direction-fork
-    text: Platforma ORIGAM je přizpůsobena častým změnám. Agilní vývoj Vám
-      umožní průběžně zkoušet software a včas říct další připomínky. Práce s
-      hotovými komponentami zase umožňuje snadnější a rychlejší dodání softwaru.
-  -
-    title: Dobře známé funkce
-    image: /img/icons/carbon_graphical-data-flow.svg
-    image-alt: flowchart
-    text: Používejte v tabulkách funkce, které dobře znáte. Filtrování,
-      třídění nebo seskupování dat. Vlastní nastavení si můžete uložit a sdílet
-      s ostatními. Cokoliv vidíte, můžete ihned exportovat do Excelu pro další
-      analýzu.
-
-aspects:
-  -
-    name: Reporty
-    content: Systém bez výstupů je jako černá díra. Když už dostanete data a
-      procesy do pořádku, můžete využít jedinečné možnosti reportovacích a
-      analytických nástrojů, se kterými ORIGAM spolupracuje. Umožněte svým
-      uživatelům zkoumat vaše data.
-    image: /img/icons/carbon_report-data.svg
-  -
-    name: Neomezený počet uživatelů
-    content: Nyní už se nemusíte bát přizvat do systému všechny vaše zákazníky
-      a partnery a zapojit je tak do společných procesů, protože byste se
-      nedoplatili. ORIGAM je svobodný software a nevyděláváme na licencích.
-    image: /img/icons/carbon_user-multiple.svg
-  -
-    name: Zabezpečení dat
-    content: Na rozdíl od Office dokumentů jsou data uložena v databázi a je
-      možné jejich správnost kontrolovat i složitými obchodními pravidly. Celý
-      systém je chráněn podrobnými přístupovými právy.
-    image: /img/icons/carbon_ibm-security.svg
-  -
-    name: Integrace
-    content: Proč ručně přepisovat data z nebo do jiných systémů? S Vaší
-      aplikaci můžete komunikovat snadno s jinými systémy anebo jiné systémy
-      pomocí API snadno propojit.
-    image: /img/icons/carbon_data-vis-1.svg
-  -
-    name: Procesy
-    content: Ještě lepší, než zapamatovat si interní proces je, pokud je tento
-      proces “zakódován” přímo v systému. Hlídejte stavy svých agend, 
-      upozorňujte uživatele a automatizujte tam, kde to dává smysl (např. 
-      automatizovaná fakturace při schválení objednávky).
-    image: /img/icons/carbon_connect.svg
-  -
-    name: Mapy
-    content: Je součástí vaší práce logistika, jste zemědělec, realitní
-      kancelář nebo prostě pracujete s mapovými podklady? ORIGAM umí data
-      vizualizovat na mapách. Můžete mapy používat přímo pro zakreslování bodů,
-      ploch nebo tras. Mapy mohou být běžnou součástí Vašeho informačního
-      systému.
-    image: /img/icons/carbon_map.svg
-  -
-    name: Přizpůsobení potřebám
-    content: Ačkoli ORIGAM obsahuje hotové osvědčené komponenty, které jsou
-      společné pro všechny zákazníky, je možné přizpůsobit výsledný systém i
-      Vašim přesným potřebám. Ať jsou to speciální vizuální prvky, napojení na
-      Váš specifický systém nebo neobvyklé algoritmy.
-    image: /img/icons/carbon_flow-modeler-reference.svg
-  -
-    name: Dokumenty
-    content: Ať je to archiv dokumentů, které sami v systému vygenerujete nebo
-      chcete ukládat dokumenty od svých zákazníků či do Vašich procesů zařadit
-      fotografie z terénu, není to problém. Ve svých agendách můžete pracovat s
-      přílohami, sdílet je se svými partnery nebo s nimi pracovat v jiných
-      webových či mobilních aplikacích.
-    image: /img/icons/carbon_document.svg
-
-industries:
-  -
-    name: Obchod & e-commerce
-    image: /img/pages/produkt/ecommerce.png
-    description: E-commerce aplikace postavená nad ORIGAM
-  -
-    name: Potravinářský průmysl
-    image: /img/pages/produkt/food.png 
-    description: ERP systém v potravinářském průmyslu
-  -
-    name: Pojišťovny
-    image: /img/pages/produkt/insurance.png 
-    description: Správa dokumentů
-  -
-    name: Reality
-    image: /img/pages/produkt/real.png 
-    description: Aplikace pro správu nemovitostí postavená nad ORIGAM
-  -
-    name: Služby
-    image: /img/pages/produkt/services.png 
-    description: Rezervační systém vytvořený nad ORIGAM
-  -
-    name: Telco
-    image: /img/pages/produkt/telco.png 
-    description: Software pro telefonní linku
-  -
-    name: Cestovní ruch
-    image: /img/pages/produkt/travel.png 
-    description: Rezervační systém vytvořený nad ORIGAM
-  -
-    name: Ostatní
-    image: /img/pages/produkt/other.png 
-    description: Rezervační systém vytvořený nad ORIGAM
-
-timeline:
-  -
-    title: Domluvte si s námi schůzku
-    explanation: Povíte nám, co Vás trápí a co potřebujete změnit.
-  -
-    title: Připravíme prototyp zdarma
-    explanation: Ten nám zabere pár dní a Vy si zkusíte, jak bude Váš nový
-      systém fungovat i vypadat.
-  -
-    title: Domluvíme si podrobnosti
-    explanation: Upřesníme si všechny technologické a procesní požadavky, cenu
-      i čas.
-  -
-    title: Vyvíjíme a ladíme
-    explanation: K vývoji přistupujeme agilně. Po menších částech. Tak, abyste
-      viděli progres a mohli nám včas říci své připomínky.
-  -
-    title: Nasazujeme!
-    explanation: Nasazení do Vašeho provozu i se zaškolením.
-  -
-    title: Pomáháme
-    explanation: Nenecháme Vás na holičkách. Poradí i pomůže komunita vývojářů
-      nebo certifikovaní partneři.
-
-testimonials:
-  -
-    logo: /img/pages/produkt/swiss.svg
-    logo-alt: Švýcarská konfederace
-    image: /img/pages/produkt/prison.jpg
-    title: Věznice také potřebuje sofistikovaný software
-    content: ORIGAM tvoří základ systému vyvinutého pro švýcarský úřad.
-      Umožňuje rychlou, objektivní a datově řízenou analýzu případu každého
-      vězně, včetně nebezpečí recidivy. Eliminuje možnost lidské chyby v úsudku
-      a přináší novou úroveň přísnosti do hodnocení případů zločinců. Projekt
-      jsme zvládli s velkou úsporou času i zdrojů.
-    name: Úřad probačních a nápravných služeb, Švýcarsko
-    link-text: www.rosnet.ch
-    link: https://www.rosnet.ch/
-  -
-    logo: /img/pages/produkt/tereos.svg
-    logo-alt: Tereos TTD
-    image: /img/pages/produkt/Dobrovice-sugar_factory.jpg
-    title: Český cukrovar zvládá logistiku surovin bez problémů
-    content: Dříve byl dovoz surovin koordinován telefonicky s řidiči. Náročná,
-      chaotická a neudržitelná situace. S novou podnikovou platformou na ORIGAM
-      firma automaticky sleduje polohu vozidel a objem dovážených surovin v
-      reálném čase, monitoruje další vstupy od zemědělců jako je kvalita půdy
-      i surovin, vytváří faktury a mnoho dalšího. První verzi aplikace jsme
-      dodali za 2 měsíce. (obrázek &copy; GT1976 CC BY-SA 4.0)
-    name: Tereos TTD, Česká republika
-    link-text: www.cukrovaryttd.cz
-    link: http://www.cukrovaryttd.cz
-  -
-    logo: /img/pages/produkt/agv.svg
-    logo-alt: AGV
-    image: /img/pages/produkt/Laufenburg_aargau_strassenbild.jpg
-    title: Přehledná evidence a správa pojistných smluv
-    content: Evidence tisíců pojistných smluv se nejlépe zvládá ve vlastním
-      systému založeném na ORIGAM. Švýcarská pojišťovna využívá automatickou
-      tvorbu dokumentů, skenování, třídění na základě čárových kódů a dokonce
-      umožňuje státní správě přístup přes extranet. To vše s 50% úsporou
-      nákladů oproti standardnímu softwaru. (obrázek &copy; Klaus Graf, CC-BY 2.5)
-    name: Pojišťovna budov kantonu Aargau, Švýcarsko
-    link-text: agv-ag.ch
-    link: https://agv-ag.ch/
-
-page-partners:
-  title: Partneři
-  description: Buďte pro své klienty spolehlivým dodavatelem enterprise softwaru.
-    Díky ORIGAM platformě je vývoj jednodušší a rychlejší než začít od nuly.
-  intro:
-    title: Poskytujte svým zákazníkům<br>jen kvalitní služby
-    text: Stát se certifikovaným partnerem ORIGAM je známka toho, že svým
-      zákazníkům poskytujete kvalitní služby s ORIGAM. A my Vás na to
-      připravíme.
-  advantages:
-    title: Výhody
-    subtitle: Proč být partnerem
-    button-text: Chci být oficiálním partnerem
-  examples:
-    title: Ukázky
-    subtitle: Jak ORIGAM vypadá?
-  benefits:
-    title: Benefity
-    subtitle: Co udělá ORIGAM za Vás?
-  process:
-    title: Proces
-    subtitle: Zaujal Vás ORIGAM?
-    button-text: Chci se s Vámi spojit
-  partner-list:
-    title: Seznam partnerů
-    button-text: Chci se s Vámi spojit
-
-partner-advantages:
-  -
-    name: Naučíme Vás stavět enterprise software
-    content: Vyvíjet backend pro interní systémy na míru je zdlouhavé a
-      náročné. Díky ORIGAM platformě už máte velkou část hotovou, tím si
-      <strong>vývoj podstatně zjednodušíte.</strong> Stihnete tak věnovat
-      pozornost i dalším zákazníkům.
-    image: /img/icons/carbon_model-alt.svg
-  -
-    name: Zákazníka zaujmete prototypem na míru
-    content: Prototyp v ORIGAM vytvoříte za pár dní. 
-      Zákazníkovi ukážete jeho představy o novém softwaru a získáte cennou
-      zpětnou vazbu hned na začátku. S prototypem máte už na první schůzce
-      <strong>konkurenční výhodu jak zaujmout zákazníka.</strong>
-    image: /img/icons/carbon_user-simulation.svg
-  -
-    name: Budete spolehlivým dodavatelem
-    content: Vyberte si model spolupráce podle oboru Vašemu podnikání. Ať už
-      jste softwaroví specialisté nebo podnikáte v jiném odvětví, ORIGAM
-      platforma bude pro Vás <strong>osvědčeným a profesionálním nástrojem,
-      </strong> který nesklame Vás ani Vaše zákazníky.
-    image: /img/icons/carbon_security.svg
-  -
-    name: Partnerství na dlouhá léta
-    content: ORIGAM platforma je open source, nic před Vámi neskrýváme. Máte
-      úplný přístup ke kódu i dokumentaci a tím <strong>plnou kontrolu nad
-      fungováním svého systému.</strong> Platformu budete využívat i dlouho
-      poté, co běžné podnikové systémy už zákazníkovi nestačí.
-    image: /img/icons/carbon_rocket.svg
-  -
-    name: Stojíme za Vámi
-    content: I když jste malá firma, s komunitou za zády budete konkurovat těm
-      větším. Využijte <strong>znalosti komunity,</strong> najměte si
-      <strong>externí vývojářský tým</strong> jiných partnerů nebo 
-      administrátory z komunity. Na tak dlouho, jak potřebujete.
-    image: /img/icons/carbon_share-knowledge.svg
-  -
-    name: Pomůžeme Vám se zakázkami
-    content: Být součástí ORIGAM komunity Vám umožní nejen sdílet znalosti, ale
-      také <strong>spolupracovat s jinými partnery,</strong> podílet se na 
-      společném marketingu nebo využít případové studie.
-    image: /img/icons/carbon_chart-venn-diagram.svg
-
-partner-examples:
-  -
-    name: Dashboard
-    image: /img/pages/partneri/dashboard.png
-  -
-    name: Databáze
-    image: /img/pages/partneri/database.png
-
-partner-benefits:
-  -
-    title: Zjednodušíte si vývoj interních systémů
-    image: /img/icons/carbon_connect-dark.svg
-  -
-    title: Rychlé a efektivní prototypování zaujme zákazníka
-    image: /img/icons/carbon_scis-transparent-supply.svg
-  -
-    title: Máte k dispozici externí vývojářský tým a administrátory
-    image: /img/icons/carbon_user-admin.svg
-
-partner-timeline:
-  -
-    title: Napište nám
-    explanation: Povězte nám, s čím potřebujete pomoct.
-  -
-    title: Probereme možnosti
-    explanation: Promluvíme si o technických možnostech ORIGAMu a jak platformu
-      využijete pro své klienty.
-  -
-    title: Vyberete si model spolupráce
-    explanation: Spolupráce přesně podle Vašich potřeb - až už jste IT vývojáři
-      nebo podnikáte v jiném oboru.
-  -
-    title: Akcelerujeme Vás
-    explanation: Zaučíme Vás, poskytneme podporu, pomůžeme v začátcích nebo si
-      najmete externí tým, který Vám se vším pomůže.
-  -
-    title: Jsme spolu na dlouho
-    explanation: Systém vyvinutý na ORIGAM je dlouhodobě udržitelný jak pro
-      Vás, tak i pro Vaše klienty.
-
-partner-list:
-  -
-    name: Advantage Solutions, s. r. o.
-    logo: /img/icons/advantage-solutions-partner.svg
-    link: 
-  -
-    name: CNW Computer Network
-    logo: /img/icons/cnw.svg
-    link: 
-  -
-    name: Icontel AG
-    logo: /img/icons/icontel.svg
-    link: 
-  -
-    name: be clever
-    logo: /img/icons/bez.svg
-    link: 
-  -
-    name: Indacom
-    logo: /img/icons/indacom.svg
-    link: 
-  -
-    name: Synergine, s. r. o.
-    logo: /img/icons/synergine-logo.svg
-    link: 
-  -
-    name: Metio Software s.r.o.
-    logo: /img/icons/metio.svg
-    link: 
-  -
-    name: Bewotec GmbH
-    logo: /img/icons/bewotec.svg
-    link: 
-  
-page-community:
-  title: Komunita
-  description: Komunitní fórum příznívců i odborníků na ORIGAM.
-    Najdete zde poznatky o vývoji platformy i návrhy na zlepšení.
-  intro:
-    title: Mít znalosti a informace – to je konkurenční výhoda.
-    text: Hledáte pomoc od ostatních nebo ji naopak nabízíte? O tom právě
-      komunita je. Dostupná každému. Sdílíme své poznatky o vývoji platformy,
-      radíme si jak opravit jednotlivé procesy, navrhujeme zlepšení a nové
-      funkcionality.
-
-community-links:
-  -
-    title: Komunitní fórum
-    image: /img/icons/forum.svg
-    image-alt: forum
-    text: Na komunitním fóru najdete veškerou dokumentaci, zdrojové kódy i
-      další informace.
-    button-text: Otevřít fórum
-    button-link: https://community.origam.com
-  -
-    title: Discord
-    image: /img/icons/carbon_logo-discord.svg
-    image-alt: discord-logo
-    text: Na našem Discordu se můžeme vzájemně potkávat a poznávat.
-    button-text: Chci se přidat
-    button-link: https://discord.com/invite/MkneJ3bS
-
-interested:
-  title: Zaujal Vás ORIGAM?
-  text: Chcete si vyzkoušet prototyp? Nebo se Vám ORIGAM líbí tak, že chcete
-    být partnerem? Napište nám, co potřebujete. Vše rádi zodpovíme.
-  button-text: Chci začít
+what-we-do:
+  title: what-we-do
+  description: what-we-do
