--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -38,7 +38,7 @@ page-home:
     title4: Poradenství s řízením procesů
     text4: Máme zkušenosti s řízením procesů v různých odvětvích. V rámci spolupráce v nás máte i poradenskou oporu, kdy Vám dokážeme předat osvědčené postupy.
     title5: Sjednocení komunikace v týmu a komunitách
-    text5: Nehledejte pořád dokumenty, návody, dohody mezi kolegy nebo zákazníky. Připravíme přímo pro Vás komunikační nástroj a naučíme Vás s ním efektivně pracovat. <a target="_blank" href="https://www.discourse.org/"> Discourse.</a>
+    text5: Nehledejte pořád dokumenty, návody, dohody mezi kolegy nebo zákazníky. Připravíme přímo pro Vás komunikační nástroj a naučíme Vás s ním efektivně pracovat. <a target="_blank" href="https://www.discourse.cz/"> Discourse.</a>
   lets-start:
     text: Nejsme jenom programátoři. Pomáháme klientům růst, inovovat a transformovat.
     button: Začněme spolu
