--- a/_i18n/cs.yml
+++ b/_i18n/cs.yml
@@ -88,7 +88,6 @@ page-home:
     member-tomasko: >
       <b>Senior full stack vývojář.</b> Podílel se na výzkumu v energetice, stavebnictví a na řídících algoritmech, zkušenosti má i s embedded softwarem v oblasti automotive.<br><br>Jaký je? Pracuje důsledně do detailu, je hloubavý a věčně kritický na svou práci.<br><br>Používá: React
 
-
   join-us:
     title: Chcete se k nám přidat?
     text: Hodíte se k nám? Představte se nám a pojďme spolu pracovat na projektech, které mají smysl.
@@ -126,6 +125,71 @@ page-home:
     category6: Telco
     category7: Tourism
     category8: Other
+    industries:
+      - name: Sales & eCommerce
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Food industry
+        content:
+          - name: Elpida
+            link: https://www.elpida.cz
+            image: elpida.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Insurance companies
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Real estate
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Services
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Telco
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Tourism
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Other
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
   contact:
     title: Kontakt
     text: Řekněte nám, s čím potřebujete pomoct nebo poradit. Spolu najdeme řešení.
