--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -125,6 +125,71 @@ page-home:
     category6: Telco
     category7: Tourism
     category8: Other
+    industries:
+      - name: Sales & eCommerce
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Food industry
+        content:
+          - name: Elpida
+            link: https://www.elpida.cz
+            image: elpida.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Insurance companies
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Real estate
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Services
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Telco
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Tourism
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
+      - name: Other
+        content:
+          - name: Le&Co
+            link: https://www.le-co.cz
+            image: leco.png
+          - name: WyBy
+            link: https://www.wyby.ch/en-us/Default.aspx
+            image: wyby.png
   contact:
     title: Kontakt
     text: Řekněte nám, s čím potřebujete pomoct nebo poradit. Spolu najdeme řešení.
