~ Image paths moved to yml

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -92,7 +92,7 @@ page-home:
         photo: img/pages/home/members/photo-susen.png
         description: <b>Senior backend architekt a databázový architekt.</b> Pracoval na projektech pro aerolinky, bankovní sektor nebo ecommerce.<br><br> Jaký je? Jeho doménou je řešení náročných úkolů. Za vším vidí rizika, proto pracuje s každou variantou, aby je odstranil.
       - name: Tomáš Vavrda
-        photo: img/pages/home/members/photo-vavrda.png
+        photo: img/pages/home/members/photo-vavrda.jpeg
         description: <b>Zakladatel AS a tvůrce ORIGAM,</b> manažer, softwarový a databázový architekt, Discourse administrátor, podnikatelský mentor, inovátor ve vzdělávání.<br><br> Jaký je? Hledá a najde vždy dobrá řešení pro klienty i kolegy. Jedná na rovinu, s jasným cílem pomoct. Zkušenosti v podnikání předává také studentům SŠ.
       - name: Majka Gerliczyová
         photo: img/pages/home/members/photo-gerliczyova.png
